

                 SCons - a software construction tool

                            Change Log


RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Steven Knight:

    - Fix explicit dependencies (Depends()) on Nodes that don't have
      attached Builders.


RELEASE 2.0.0.beta.20100605 - Sat, 05 Jun 2010 21:02:48 -0700

  From Dirk Baechle:

    - Fix XML in documentation.

  From W. Trevor King:

    - Revisions to README.

  From Steven Knight:

    - Provide forward compatibility for the 'profile' module.

    - Provide forward compatibility for the 'pickle' module.

    - Provide forward compatibility for the 'io' module.

    - Provide forward compatibility for the 'queue' module.

    - Provide forward compatibility for the 'collections' module.

    - Provide forward compatibility for the 'builtins' module.

    - Provide forward compatibility for 'sys.intern()'.

    - Convert to os.walk() from of os.path.walk().

    - Remove compatibility logic no longer needed.

    - Add a '-3' option to runtest to print 3.x incompatibility warnings.

    - Convert old-style classes into new-style classes.

    - Fix "Ignoring corrupt sconsign entry" warnings when building
      in a tree with a pre-2.0 .sconsign file.

    - Fix propagation from environment of VS*COMNTOOLS to resolve issues 
      initializing MSVC/MSVS/SDK issues.

    - Handle detecting Visual C++ on Python verions with upper-case
      platform architectures like 'AMD64'.

  From Greg Noel:

    - Apply numerous Python fixers to update code to more modern idioms.
      Find where fixers should be applied to code in test strings and
      apply the fixers there, too.

    - Write a fixer to convert string functions to string methods.

    - Modify the 'dict' fixer to be less conservative.

    - Modify the 'apply' fixer to handle more cases.

    - Create a modified 'types' fixer that converts types to 2.x
      equivalents rather than 3.x equivalents.
